Company and office functionalities added.

--- a/CompanyManagementMVC5/CompanyManagement.Data/CompanyManagement.Data.csproj
+++ b/CompanyManagementMVC5/CompanyManagement.Data/CompanyManagement.Data.csproj
@@ -57,6 +57,12 @@
     <Compile Include="Models\EmployeeExperienceLevel.cs" />
     <Compile Include="Models\Office.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CompanyService.cs" />
+    <Compile Include="Services\EmployeeService.cs" />
+    <Compile Include="Services\Interfaces\IEmployeeService.cs" />
+    <Compile Include="Services\Interfaces\ICompanyService.cs" />
+    <Compile Include="Services\Interfaces\IOfficeService.cs" />
+    <Compile Include="Services\OfficeService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
